deployment/Kubernetes/overlays/general/staging/prototype/prototype-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prototype-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
        - staging.prototype.tarski.nl
  rules:
    - host: staging.prototype.tarski.nl
